Fixed styling issues on mobile

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ p {
 }
 
 #projects {
-    width: 75%;
+    width: 90%;
     height: auto;
     position: relative;
     margin: auto;
@@ -1364,7 +1364,7 @@ button[type=submit]:hover {
     }
 
     .contact_right {
-        width: 80%;
+        width: 90%;
     }
 
     .policy {
